# Control

./: Cargo.toml  README.md  TECHNICAL_DOCUMENTATION.md  index.html  package-lock.json  package.json  test-backend.html  vite.config.ts
src/: App.tsx  index.css  index.html  main.rs
src-tauri/: tauri.conf.json
src-tauri/src/: crypto.rs  dead_drop.rs  p2p.rs
src/components/: DeadDrop.tsx  GhostChat.tsx  Identity.tsx
