[package]
name = "control"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
base64 = "0.21"
hex = "0.4"
bs58 = "0.5"

# Crypto & Security
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"

# P2P (Stable Version for Tauri v1) - Enhanced with Relay & Identify
libp2p = { version = "0.52", features = ["gossipsub", "mdns", "noise", "yamux", "tcp", "tokio", "macros", "relay", "dcutr", "identify", "ping"] }

# IPFS & Storage
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tempfile = "3.8"
futures = "0.3"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Shamir Secret Sharing
sharks = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
